sample/04_argocd/01_sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-pods-argo
spec:
#   type: ClusterIP
#   type: NodePort
  type: LoadBalancer
  loadBalancerIP: 192.168.10.242
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: echo-pods-argo
