sample/04_argocd/01_sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
spec:
  externalIPs:
  -  192.168.10.240  
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: echo-pods-argo
            port:
              number: 80
  ingressClassName: nginx
